Added show/hide device persistence

--- a/app/workers/apiMapping.json
+++ b/app/workers/apiMapping.json
@@ -20,6 +20,7 @@
     { "action": "signerAppareil" },
     { "action": "restaurerAppareil" },
     { "action": "majConfigurationUsager" },
+    { "action": "showHideSensor" },
     { "domain": "senseurspassifs_relai", "action": "commandeAppareil" }
   ],
   "subscriptions": {
