--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@react-router/node": "7.10.1",
     "@react-router/serve": "7.10.1",
     "comlink": "^4.4.2",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "idb": "^8.0.3",
     "isbot": "^5.1.31",
     "luxon": "^3.7.2",
@@ -21,6 +24,7 @@
     "python-format-js": "^1.4.3",
     "react": "^19.2.2",
     "react-dom": "^19.2.2",
+    "react-i18next": "^16.5.1",
     "react-router": "7.10.1",
     "recharts": "^3.5.1",
     "vite-plugin-comlink": "^5.3.0",
