--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,36 +1,21 @@
 {
   "short_name": "MilleSens",
-  "name": "MilleGrilles MilleSens",
-  "description": "HomeAssistant application for MilleGrilles",
-  "shortcuts": [
-    {
-      "name": "MilleSens",
-      "short_name": "MilleSens",
-      "description": "Home Assistant",
-      "url": "/millesens",
-      "icons": [{ "src": "millegrilles_192.jpg", "sizes": "192x192" }]
-    }
-  ],
+  "name": "MilleSens",
+  "description": "MilleSens home-assistant style application",
+  "start_url": "/millesens/",
+  "display": "standalone",
+  "background_color": "#0f172a",
+  "theme_color": "#0f172a",
   "icons": [
     {
-      "src": "favicon.ico",
-      "type": "image/jpg",
-      "sizes": "64x64"
+      "src": "/millesens/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "millegrilles_192.jpg",
-      "type": "image/jpg",
-      "sizes": "192x192"
-    },
-    {
-      "src": "millegrilles_512.jpg",
-      "type": "image/jpg",
-      "sizes": "512x512"
+      "src": "/millesens/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
-  ],
-  "start_url": "/millesens",
-  "scope": "/",
-  "display": "fullscreen",
-  "theme_color": "#000000",
-  "background_color": "#3A3F74"
+  ]
 }
